package es.uniovi.dlp.ast.types;

import java.util.List;

public class ArrayType implements Type{
    private List<Type> list;
}
