package es.uniovi.dlp.ast.types;

public class IntType implements Type{
}
