package es.uniovi.dlp.ast.types;

import java.util.List;

public class RecordType implements Type{
    private List<RecordField> list;
}
