package es.uniovi.dlp.ast.types;

public class VoidType implements Type{
}
