@startuml Types
skinparam style strictuml
skinparam monochrome true



interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Type

ASTNode <|-- Type


class IntType
class CharType
class RealType
class VoidType
class ArrayType {
    arrayOf: Type
}
class RecordType {
    fields: List<RecordField>
}

class FuncType {
    parameters: List<VarDefinition>
    returnType: Type
}


Type <|.. IntType
Type <|.. CharType
Type <|.. RealType
Type <|.. ArrayType
Type <|.. RecordType
Type <|.. VoidType
Type <|.. FuncType


FuncType o-- "1" Type
FuncType o-- "0..n" VarDefinition

RecordType o-- "0..n" RecordField

ArrayType o-- "1" Type


@enduml
